Fixed map size on mobile, username overflow in navbar.

--- a/sadcowpng/sharedspaces/static/account.css
+++ b/sadcowpng/sharedspaces/static/account.css
@@ -23,6 +23,7 @@
         background-color: #303C6C;
         width: auto;
         height: auto;
+        word-wrap: break-word;
     }
 
     .badge {
